# dusklight

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  cmake-variants.yaml  files.cmake  flake.nix  version.h.in
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build.yml
ci/: build-appimage.sh
cmake/: WindowsTargetProcessor.cmake
docs/: building.md  code-conventions.md  ios-install-altstore.md  modding.md
include/: global.h
include/SSystem/SComponent/: c_lib.h  c_xyz.h
include/Z2AudioLib/: Z2SceneMgr.h  Z2StatusMgr.h
include/d/: d_a_item_static.h  d_a_itembase_static.h  d_cam_param.h  d_camera.h  d_com_inf_game.h  d_drawlist.h  d_event.h  d_event_manager.h  d_file_sel_info.h  d_file_select.h  d_item.h  d_item_data.h  d_jnt_col.h  d_map.h  d_map_path_fmap.h  d_menu_collect.h  d_menu_dmap.h  d_menu_fmap2D.h  d_menu_map_common.h  d_menu_ring.h  d_menu_save.h  d_meter2_draw.h  d_meter2_info.h  d_meter_button.h  d_msg_class.h  d_msg_flow.h  d_msg_object.h  d_msg_scrn_3select.h  d_msg_scrn_base.h  d_msg_scrn_item.h  d_msg_scrn_talk.h  d_msg_string_base.h  d_msg_unit.h  d_name.h  d_particle_name.h  d_s_logo.h  d_save.h  d_select_cursor.h  d_shop_system.h  d_stage.h
include/d/actor/: d_a_alink.h  d_a_b_gnd.h  d_a_b_tn.h  d_a_door_boss.h  d_a_door_bossL1.h  d_a_door_dbdoor00.h  d_a_door_knob00.h  d_a_door_mbossL1.h  d_a_door_shutter.h  d_a_e_arrow.h  d_a_e_ba.h  d_a_e_db.h  d_a_e_hb.h  d_a_e_mb.h  d_a_e_rd.h  d_a_e_rdy.h  d_a_e_s1.h  d_a_e_tt.h  d_a_e_wb.h  d_a_e_yd.h  d_a_e_yg.h  d_a_e_yh.h  d_a_horse.h  d_a_kago.h  d_a_mg_fish.h  d_a_mg_rod.h  d_a_mirror.h  d_a_movie_player.h  d_a_myna.h  d_a_npc.h  d_a_npc2.h  d_a_npc4.h  d_a_npc_aru.h  d_a_npc_ashB.h  d_a_npc_bans.h  d_a_npc_besu.h  d_a_npc_blue_ns.h  d_a_npc_bou.h  d_a_npc_chat.h  d_a_npc_clerka.h  (+102 more)
include/dusk/: achievements.h  action_bindings.h  app_info.hpp  autosave.h  config.hpp  config_var.hpp  crash_handler.h  crash_reporting.h  discord_presence.hpp  dvd_asset.hpp  endian.h  frame_interpolation.h  gamepad_color.h  gx_helper.h  gyro.h  hotkeys.h  io.hpp  livesplit.h  logging.h  main.h  map_loader_definitions.h  math.h  mod_api.h  mod_loader.hpp  settings.h  speedrun.h  string.hpp  time.h  version.hpp
include/dusk/audio/: DuskAudioSystem.h
include/f_op/: f_op_actor.h  f_op_actor_mng.h  f_op_msg_mng.h
include/f_pc/: f_pc_base.h  f_pc_leaf.h  f_pc_method.h  f_pc_profile.h  f_pc_profile_lst.h
include/m_Do/: m_Do_audio.h  m_Do_ext.h  m_Do_lib.h
libs/freeverb/: denormals.h
res/rml/: overlay.rcss  popup.rcss  prelaunch.rcss  tabbing.rcss  tuner.rcss  window.rcss
src/SSystem/SComponent/: c_lib.cpp
src/Z2AudioLib/: SpotName.h  Z2Audience.cpp  Z2SceneMgr.cpp  Z2SeqMgr.cpp  Z2SoundMgr.cpp  Z2StatusMgr.cpp
src/d/: d_a_itembase_static.cpp  d_attention.cpp  d_bg_parts.cpp  d_bright_check.cpp  d_camera.cpp  d_cc_uty.cpp  d_com_inf_game.cpp  d_com_static.cpp  d_debug_camera.cpp  d_demo.cpp  d_drawlist.cpp  d_envse.cpp  d_ev_camera.cpp  d_event.cpp  d_event_manager.cpp  d_file_sel_info.cpp  d_file_select.cpp  d_gameover.cpp  d_item.cpp  d_item_data.cpp  d_k_wmark.cpp  d_k_wpillar.cpp  d_kankyo.cpp  d_kankyo_rain.cpp  d_ky_thunder.cpp  d_kyeff.cpp  d_kyeff2.cpp  d_lib.cpp  d_map.cpp  d_map_path.cpp  d_menu_calibration.cpp  d_menu_collect.cpp  d_menu_dmap.cpp  d_menu_dmap_map.cpp  d_menu_fishing.cpp  d_menu_fmap.cpp  d_menu_fmap2D.cpp  d_menu_fmap_map.cpp  d_menu_insect.cpp  d_menu_item_explain.cpp  (+50 more)
src/d/actor/: d_a_L7demo_dr.cpp  d_a_L7low_dr.cpp  d_a_L7op_demo_dr.cpp  d_a_alink.cpp  d_a_alink_cut.inc  d_a_alink_damage.inc  d_a_alink_demo.inc  d_a_alink_dusk.cpp  d_a_alink_effect.inc  d_a_alink_hook.inc  d_a_alink_horse.inc  d_a_alink_kandelaar.inc  d_a_alink_link.inc  d_a_alink_swim.inc  d_a_alink_swindow.inc  d_a_alink_wolf.inc  d_a_alldie.cpp  d_a_andsw.cpp  d_a_andsw2.cpp  d_a_arrow.cpp  d_a_b_bh.cpp  d_a_b_bq.cpp  d_a_b_dr.cpp  d_a_b_dre.cpp  d_a_b_ds.cpp  d_a_b_gg.cpp  d_a_b_gm.cpp  d_a_b_gnd.cpp  d_a_b_go.cpp  d_a_b_gos.cpp  d_a_b_mgn.cpp  d_a_b_ob.cpp  d_a_b_oh.cpp  d_a_b_oh2.cpp  d_a_b_tn.cpp  d_a_b_yo.cpp  d_a_b_yo_ice.cpp  d_a_b_zant.cpp  d_a_b_zant_magic.cpp  d_a_b_zant_mobile.cpp  (+741 more)
src/dusk/: OSReport.cpp  achievements.cpp  action_bindings.cpp  asan_options.c  autosave.cpp  config.cpp  crash_handler.cpp  crash_reporting.cpp  data.cpp  data.hpp  discord.cpp  discord.hpp  discord_presence.cpp  dvd_asset.cpp  extras.c  file_select.cpp  file_select.hpp  file_select_macos.mm  frame_interpolation.cpp  game_clock.cpp  gamepad_color.cpp  gyro.cpp  hook_system.cpp  io.cpp  iso_validate.cpp  iso_validate.hpp  livesplit.cpp  logging.cpp  main.cpp  mod_loader.cpp  settings.cpp  speedrun.cpp  string.cpp  stubs.cpp  update_check.cpp  update_check.hpp  version.cpp
src/dusk/archipelago/: archipelago_context.cpp  archipelago_context.hpp
src/dusk/audio/: DuskDsp.cpp  DuskDsp.hpp
src/dusk/http/: android.cpp  curl.cpp  http.hpp  no_backend.cpp  url_session.mm  winhttp.cpp
src/dusk/imgui/: ImGuiAchievements.cpp  ImGuiAchievements.hpp  ImGuiActorSpawner.cpp  ImGuiArchipelagoDebug.cpp  ImGuiArchipelagoDebug.h  ImGuiAudio.cpp  ImGuiCameraOverlay.cpp  ImGuiConsole.cpp  ImGuiConsole.hpp  ImGuiControllerOverlay.cpp  ImGuiEngine.cpp  ImGuiEnhancedLightingWindow.cpp  ImGuiEnhancedLightingWindow.hpp  ImGuiEventFlags.hpp  ImGuiFirstRunPreset.cpp  ImGuiFirstRunPreset.hpp  ImGuiHeapOverlay.cpp  ImGuiMapLoader.cpp  ImGuiMenuEnhancements.cpp  ImGuiMenuGame.cpp  ImGuiMenuGame.hpp  ImGuiMenuRandomizer.cpp  ImGuiMenuRandomizer.hpp  ImGuiMenuTools.cpp  ImGuiMenuTools.hpp  ImGuiPreLaunchWindow.cpp  ImGuiProcessOverlay.cpp  (+3 more)
src/f_ap/: f_ap_game.cpp
src/f_op/: f_op_actor.cpp  f_op_actor_mng.cpp  f_op_camera.cpp  f_op_msg_mng.cpp  f_op_overlap_req.cpp  f_op_scene_req.cpp
src/f_pc/: f_pc_base.cpp  f_pc_leaf.cpp  f_pc_method.cpp  f_pc_profile.cpp  f_pc_profile_lst.cpp
src/m_Do/: m_Do_MemCard.cpp  m_Do_MemCardRWmng.cpp  m_Do_ext.cpp  m_Do_graphic.cpp  m_Do_lib.cpp  m_Do_machine.cpp  m_Do_main.cpp
tools/mod_template/: mod.json
tools/mod_test/: mod.json
(+166 files in other folders)
